--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/iCoderBootstrap/about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact</a>
+              <a class="nav-link" href="/iCoderBootstrap/contact.html">Contact</a>
             </li>
             <li class="nav-item dropdown">
               <a
