--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,10 @@
                 <a class="nav-link " aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="/about.html">About</a>
+                <a class="nav-link " href="/iCoderBootstrap/about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/contcat.html">Contact</a>
+                <a class="nav-link active" href="/iCoderBootstrap/contcat.html">Contact</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
